# novel-writer

./: .gitignore  DEV_GUIDE.md  LICENSE  README.md  build_installer.bat  gen_icons.py  installer.iss  novel-writer.spec  pyproject.toml  run.sh
config/: agents.json  default_agents.json  default_providers.json
docs/: workflow_design.md
src/novel_writer/: __init__.py  __main__.py  app.py  locales.py
src/novel_writer/assets/: AppIcon.icns
src/novel_writer/core/: anti_patterns.py  chapter_tracker.py  character_sim.py  exporter.py  game_state.py  logger.py  memory.py  project_io.py  quality_checker.py  rag.py  reading_power.py  workflow.py  world_state.py
src/novel_writer/core/agents/: __init__.py  base.py  editor.py  planner.py  polisher.py  proofreader.py  reviewer.py  writer.py
src/novel_writer/core/llm/: __init__.py  base.py  claude.py  client.py  ollama.py  openai_compat.py
src/novel_writer/models/: __init__.py  chapter.py  character.py  project.py
src/novel_writer/ui/: agent_animation.py  agent_panel.py  editor_panel.py  main_window.py  new_project_dialog.py  office_scene.py  settings_dialog.py  sidebar.py  styles.py  workflow_bar.py  workflow_panel.py
tests/: test_exporter.py  test_quality_checker.py  test_reading_power.py  test_workflow.py
